--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_mlkit_pose_detection: ^0.14.0
   flutter_spinkit: ^5.2.0  # Optional loading animations
   permission_handler: ^11.3.1
+  shared_preferences: ^2.2.2
 
 
 dev_dependencies:
