--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   flutter_spinkit: ^5.2.0  # Optional loading animations
   permission_handler: ^11.3.1
   shared_preferences: ^2.2.2
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+    android: true
+    ios: true
+    image_path: "assets/images/app_icon.png" # replace with your image path
 
 
 dev_dependencies:
