--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_launcher_icons: ^0.13.1
   intl: ^0.18.1
+  flutter_html: ^3.0.0-alpha.6
 
 flutter_icons:
     android: true
