--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.4.0
+  lottie: ^3.1.2
   table_calendar: ^3.0.9
   camera: ^0.10.5+9
   google_mlkit_pose_detection: ^0.14.0
