--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   lottie: ^3.1.2
   table_calendar: ^3.0.9
   camera: ^0.10.5+9
-  google_mlkit_pose_detection: ^0.14.0
   flutter_spinkit: ^5.2.0  # Optional loading animations
   permission_handler: ^11.3.1
   shared_preferences: ^2.2.2
@@ -46,6 +45,8 @@ dependencies:
   intl: ^0.18.1
   flutter_html: ^3.0.0-alpha.6
   image: ^4.1.4  # For image processing
+  google_mlkit_pose_detection: ^0.7.0
+  google_mlkit_commons: ^0.4.0
 
 flutter_icons:
     android: true
@@ -80,6 +81,7 @@ flutter:
     - assets/images/
     - assets/bodies/
     - assets/exercises/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
