--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   google_mlkit_pose_detection: ^0.11.1
   google_mlkit_object_detection: ^0.12.0
   google_mlkit_commons: ^0.7.1
+  google_generative_ai: ^0.4.0
 
 flutter_icons:
   android: true
