--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   google_mlkit_object_detection: ^0.12.0
   google_mlkit_commons: ^0.7.1
   google_generative_ai: ^0.4.0
-
+  animate_do: ^3.3.4
 flutter_icons:
   android: true
   ios: true
